--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@ body{
 
 header h1{
     font-size:100px;
-    color:white;
+    color:rgb(54, 21, 21);
+    text-transform: uppercase;
     margin-top:0px;
-    transition: 2s ease-in-out;
+    transition:1s ease-in-out;
     
 }
  .nametitle{
@@ -39,7 +40,7 @@ header h1{
     position: relative;
     width:100%;
     height:100vh;
-    background:radial-gradient(rgb(70, 65, 65),black);
+    background:linear-gradient(to top,aqua,pink);
     overflow:hidden;
     
 }
@@ -59,13 +60,15 @@ header h1{
     display:block;
     width:100px;
     height:100px;
+    border:5px solid white;
+    border-radius: 50%;
     background-color:white;
 }
 #firstpage .set div:nth-child(1){
     left:20%;
     animation: animate 15s linear infinite;
     animation-delay:-7s;
-    background-color: red;
+    background-color: rgb(0, 255, 55);
 }
 #firstpage .set div:nth-child(2){
     left:50%;
@@ -160,6 +163,9 @@ header h1{
 
 
 /* profile*/
+.profile{
+    background-color:white;
+    color:black; }
 .container {
     width: 50%;
     display: flex;
@@ -173,11 +179,9 @@ header h1{
     border-radius: 30px;
     padding: 0rem 5rem;
     
-    box-shadow: 10px 0px 20px 10px rgba(0, 0, 0, 0.2), 0px 0px 100px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 10px 20px 5px gray;
   }
-  .card:hover{
-    background:linear-gradient(white,aqua);
-  }
+  
   
   .sneaker {
     min-height: 35vh;
@@ -186,6 +190,7 @@ header h1{
     justify-content: center;
   }
   .sneaker img {
+    
     width: 10rem;
     height:15rem;
     z-index: 2;
@@ -270,14 +275,7 @@ header h1{
       height:130px;
       text-align: center;
       border-radius:20px;
-  }.firstbox:hover , .secondbox:hover , .thirdbox:hover , .fourthbox:hover{
-      background:linear-gradient(aqua,white);
-      box-shadow: 0px 10px 20px 0px #535050;
-      width: 105%;
-      height:170px;
-      font-family: 'Times New Roman', Times, serif;
-      text-transform: uppercase;
-      transition:0.7s ease;
+
   }#course{
       font-size:50px;
       font-family: 'Lobster', cursive;
@@ -335,6 +333,10 @@ header h1{
     }  
  
     /*profile*/
+    .profile{
+    background-color:white;
+    color:black; 
+    }
     .container{
         display:none;
     }
